Correction to CSS to fix scroll on small devices

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -57,8 +57,15 @@ section:nth-child(4) {
 
   section:nth-child(2),
   section:nth-child(4) {
-    background-attachment: scroll;
+    background-attachment: fixed
   }
+
+  @media (max-width: 600px) {
+
+    section:nth-child(2),
+    section:nth-child(4) {
+      background-attachment: fixed;
+    }
 }
 
 #section {
@@ -100,7 +107,8 @@ img {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 150px;
+  height: 100px;
   line-height: 30px;
   background-color: #f2f9ee;
+  
 }
